--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
           -->
           <form id="form-search">
             <div class="input-group">
-              <input type="text" class="form-control" name="query"/>
+              <input type="text" class="form-control" name="query" placeholder="Search"/>
               <span class="input-group-btn">
-                <input type="submit" class="btn btn-primary" value="Search By Title"/>
+                <input type="submit" class="btn btn-primary" value="Search By Topic"/>
               </span>
             </div>
           </form>
